--- a/src/blogposts/entry.njk
+++ b/src/blogposts/entry.njk
@@ -5,11 +5,11 @@ pagination:
   alias: blogpost
 permalink: blog/{{ blogpost.slug }}/index.html
 ---
-
 {% extends "layouts/base.njk" %}
-{% set htmlTitle = item.title %}
+{% set htmlTitle = blogpost.title %}
 
 {% block content %}
+  {# blogpost #}
   <img src="{{ blogpost.image }}?fit=crop&amp;w=1024&amp;h=576"
        srcset="{{ blogpost.image }}?fit=crop&amp;w=600&amp;h=338 600w,
                {{ blogpost.image }}?fit=crop&amp;w=800&amp;h=450 800w,
@@ -22,4 +22,20 @@ permalink: blog/{{ blogpost.slug }}/index.html
   <p><time datetime="{{ blogpost.date | date('Y-M-DD') }}">{{ blogpost.date|date("MMMM Do, Y") }}</time></p>
   <p>{{ blogpost.intro }}</p>
   {{ blogpost.body | safe }}
+
+  {# related blogposts #}
+  {% if blogpost.relatedBlogs|length %}
+    <h2>You might also like</h2>
+    <ul>
+    {% for item in blogpost.relatedBlogs %}
+      {% for post in blogposts %}
+        {% if post.id == item.id %}
+          <li>
+            <a href="/blog/{{ post.slug }}">{{ post.title }}</a>
+          </li>
+        {% endif %}
+      {% endfor %}
+    {% endfor %}
+    </ul>
+  {% endif %}
 {% endblock %}
