--- a/src/content/index.njk
+++ b/src/content/index.njk
@@ -7,6 +7,7 @@ permalink: index.html
 {% set htmlTitle = "Homepage" %}
 
 {% block content %}
+
   <h1>Blogposts</h1>
   {% for item in blogposts | limit(3) %}
     {% if loop.first %}<ul>{% endif %}
@@ -20,5 +21,7 @@ permalink: index.html
   {% else %}
     <p>No blogpost found</p>
   {% endfor %}
+
+  <p><a href="/blog/">View all blogposts</a></p>
 
 {% endblock %}
